# KonsoleGE

./: .gitignore  CMakeLists.txt  README.md
scripts/: embed_media.py
